--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,1 +1,41 @@
+name: Build Kivy APK
+
+on:
+  workflow_dispatch:  # Allows manual trigger from Actions tab
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      # Step 1: Checkout repository
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      # Step 2: Install system dependencies
+      - name: Install dependencies
+        run: |
+          sudo apt update
+          sudo apt install -y python3 python3-pip openjdk-17-jdk unzip zip libffi-dev libssl-dev
+          pip install --upgrade pip
+          pip install buildozer Cython virtualenv
+
+      # Step 3: Cache Buildozer downloads (optional but speeds up builds)
+      - name: Cache Buildozer
+        uses: actions/cache@v3
+        with:
+          path: .buildozer
+          key: ${{ runner.os }}-buildozer
+
+      # Step 4: Build APK
+      - name: Build APK
+        run: |
+          buildozer -v android debug
+
+      # Step 5: Upload APK to GitHub Artifacts
+      - name: Upload APK
+        uses: actions/upload-artifact@v3
+        with:
+          name: KivyApp-APK
+          path: bin/*.apk
 
