--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,18 +1,21 @@
 name: Build Kivy APK
 
 on:
-  workflow_dispatch:  # Allows manual trigger from Actions tab
+  workflow_dispatch:  # ✅ This line allows manual trigger from the Actions tab
+  push:                # ✅ Optional: also trigger when you push code to main branch
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout repository
+      # Step 1: Checkout your repository
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # Step 2: Install system dependencies
+      # Step 2: Install dependencies
       - name: Install dependencies
         run: |
           sudo apt update
@@ -20,7 +23,7 @@ jobs:
           pip install --upgrade pip
           pip install buildozer Cython virtualenv
 
-      # Step 3: Cache Buildozer downloads (optional but speeds up builds)
+      # Step 3: Cache Buildozer (optional, speeds up builds)
       - name: Cache Buildozer
         uses: actions/cache@v3
         with:
@@ -32,10 +35,9 @@ jobs:
         run: |
           buildozer -v android debug
 
-      # Step 5: Upload APK to GitHub Artifacts
+      # Step 5: Upload APK as workflow artifact
       - name: Upload APK
         uses: actions/upload-artifact@v3
         with:
           name: KivyApp-APK
           path: bin/*.apk
-
