--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Kivy APK
+name: Build Fabric Calculator APK
 
 on:
   workflow_dispatch:
@@ -11,35 +11,41 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      # Step 1: Checkout the repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
+      # Step 2: Install system dependencies required by Buildozer/Kivy
       - name: Install dependencies
         run: |
           sudo apt update
           sudo apt install -y \
             python3 python3-pip python3-dev \
+            build-essential autoconf automake libtool pkg-config \
             openjdk-17-jdk unzip zip \
-            build-essential \
+            zlib1g-dev \
             libffi-dev libssl-dev \
             libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev libsdl2-ttf-dev \
             libportmidi-dev libswscale-dev libavformat-dev libavcodec-dev \
-            zlib1g-dev
+            libfreetype6-dev
           pip install --upgrade pip
           pip install buildozer Cython virtualenv
 
+      # Step 3: Cache the Buildozer folder to speed up builds
       - name: Cache Buildozer
         uses: actions/cache@v4
         with:
           path: .buildozer
           key: ${{ runner.os }}-buildozer
 
+      # Step 4: Build the APK
       - name: Build APK
         run: |
           buildozer -v android debug
 
+      # Step 5: Upload APK artifact
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: KivyApp-APK
+          name: FabricCalculator-APK
           path: bin/*.apk
